recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:18: error: not found: value legnth
		recule(legnth / 2.)
                       ^